--- a/stylesheet/theme1.css
+++ b/stylesheet/theme1.css
@@ -17,10 +17,13 @@
     color: #E3625D;
 }
 
-.content {
+.ss-frame {
     height:200px;
+}
+
+.content {
     padding-left: 10px;
-    padding-right: 10px;
+    padding-right: 22px;
 }
 
 .content b {
